Fix alignment further, larger autotab hide

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -8,7 +8,7 @@
 }
 
 .ProjectCard{
-  min-height: 620px;
+
 }
 
 .ProjectCardContent{
